修复-XX:-name类型参数无法识别bug